mostly messing around with colors, fixed the right click to add alert on mobile.

--- a/app/assets/stylesheets/maplayout.scss
+++ b/app/assets/stylesheets/maplayout.scss
@@ -6,7 +6,7 @@
     height: 100%;
     left: 0;
     z-index: 2;
-    background-color: #35353B;
+    background-color: #405F73;
     box-shadow: 5px 0 5px -5px #333;
 }
 
@@ -105,7 +105,7 @@
 
 #searchli {
     padding-left: 23px;
-    background: #35353B;
+    background: #405F73;
 }
 
 span {
@@ -125,8 +125,7 @@ span {
     z-index: 1;
     position: absolute;
     right: 0;
-    margin-top: 15px;
-    margin-right: 15px;
+    margin: 15px;
 }
 
 
