--- a/app/assets/stylesheets/profilelayout.scss
+++ b/app/assets/stylesheets/profilelayout.scss
@@ -1,7 +1,7 @@
 /* profile page layout */
 
 .profileheader {
-    background: #35353B;
+    background: #48B148;
     color: #FFF;
 }
 
@@ -187,7 +187,7 @@ class */
     justify-content:center;
     align-content:center;
     flex-direction:column;
-    background: url('signin.jpg');
+    background: url('signup.jpg');
     background-size: cover;
     font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 200;
