--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,7 +2,9 @@
 // variables //
 
 :root {
-    --main-bg-color: #323238;
-    --main-color: #323238;
+    --main-bg-color: #D1D1D1;
+    --main-color: #405F73;
+    --secondary-bg-color: #A66D6D;
+    --secondary-color: #000;
 }
 
